fix(header): fix fonts on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -2,12 +2,13 @@
     background: transparent url('../img/header banner.png') 0% 0% no-repeat padding-box;
     opacity: 1;
     width: 100%;
-    height: 568px;
+    height: auto;
     display: block;
 }
 
 .header__button {
-    padding-right: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
     color: gray;
     list-style-type: none;
     text-decoration: none;
@@ -15,8 +16,6 @@
 .header__button--active {
     color: black;
 }
-
-
 
 .header-container {
     display: block;
@@ -35,19 +34,15 @@
     align-items: center;
     display: flex;
 }
-
-
 .header-left__logo {
     background-color: #EE4876;
     color: white;
     padding: 5px 20px 5px 20px;
 }
-
 .header-left__links-list {
     display: flex;
     flex-wrap: wrap;
 }
-
 
 .header-right {
     justify-content: center;
@@ -65,23 +60,47 @@
     align-items: left;
     justify-content: space-around;
 }
-
 .header-bottom__text {
-    font-size: 24px;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
     padding: 0;
 }
-
 .header-bottom__text--small {
-    font-size: 48px;
+    font-weight: bold;
+    margin: 0;
+}
+.header-bottom__text--big {
     font-weight: bold;
     margin: 0;
 }
 
-.header-bottom__text--big {
-    font-size: 100px;
-    font-weight: bold;
-    margin: 0;
+@media (min-width: 320px) and (max-width: 480px) {
+    .header {
+        font-size: 12px;
+    }
+    .header-bottom__text {
+        font-size: 12px;
+    }
+    .header-bottom__text--small {
+        font-size: 24px;
+    }
+    .header-bottom__text--big {
+        flex-size: 50px;
+    }
+}   
+
+@media (min-width: 481px) {
+    .header {
+        font-size: 16px;
+    }
+    .header-bottom__text {
+        font-size: 24px;
+    }
+    .header-bottom__text--small {
+        font-size: 48px;
+    }
+    .header-bottom__text--big {
+        flex-size: 100px;
+    }
 }
